# practical_task

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  setup.cfg
application/components/reports_backend/: README.md  pyproject.toml  setup.cfg
application/components/reports_backend/reports/adapters/: cli.py
application/components/reports_backend/reports/adapters/api/: app.py
application/components/reports_backend/reports/adapters/api/controllers/: reports.py
application/components/reports_backend/reports/adapters/broker/: pub.py  sub.py
application/components/reports_backend/reports/adapters/database/: __init__.py  mapping.py  settings.py  tables.py
application/components/reports_backend/reports/adapters/database/alembic/: env.py
application/components/reports_backend/reports/adapters/database/migrations/: 2024_01_16_12_23_22_initial.py
application/components/reports_backend/reports/adapters/database/repositories/: __init__.py  reports.py
application/components/reports_backend/reports/adapters/database/transaction/: __init__.py  base_repository.py  transaction.py
application/components/reports_backend/reports/adapters/log/: settings.py
application/components/reports_backend/reports/application/: entities.py  transaction.py
application/components/reports_backend/reports/application/interfaces/: __init__.py  report.py
application/components/reports_backend/reports/application/services/: __init__.py  reports.py
application/components/reports_backend/reports/composites/: alembic_runner.py  api.py  cli.py  subs.py
database/: materialized_path.py
explain/: ChatGPT.txt  README.md  examples.sql
gevent/: database.py  exploration.py  io_methods.py
gevente/: README.md
gevente/explorations/: __init__.py  case_1.py  case_2.py  case_3.py  case_4.py
gevente/tools/: adapters.py  constants.py  methods.py  timer.py
imports/: database.py  engine.py  kafka.py  rabbit.py
iterator/: cart.py  entities.py
multithreading/: example_deadlock_1.py  example_deadlock_2.py  raise_condition.py  raise_condition_solve.py
network/: README.md  docker-compose.yml
network/main/: Dockerfile
network/one/: Dockerfile
network/two/: Dockerfile
oauth2/: README.md  api.py  api_google.py  api_vk.py  app.py  constants.py
oauth2/adapters/: flow.py  request_auth_server.py
oauth2/application/: dto.py  (+2 more)
package/: README.md  pyproject.toml  setup.cfg
package/stock_market/: constants.py  dto.py  interfaces.py
package/stock_market/adapters/exchangerate/: __init__.py  rates.py  settings.py
patterns/: decorator.py  factory_method.py  singltone.py
postgrest/: README.md  postgrest.conf
sqlalchemy/: README.md  alembic.ini  constants.py  declarative.py  entities.py  events.py  imperative.py  initial_db.py  polymorphic.py  settings.py
yoyo/: README.md  yoyo.ini
(+55 files in other folders)
