[metadata]
name = practical_task
version = 0.0.1
author = Pletnev D


[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    requests==2.28.2
    urllib3==1.26.14
    stock-market-adapter==0.0.3
    pydantic==1.10.6
    greenlet==2.0.2
    sqlalchemy==2.0.7

[options.packages.find]
exclude =
    package*

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0
    toml~=0.10.2
    flake8~=5.0.4
    Flake8-pyproject~=1.1.0
