[metadata]
name = Reports
version = 0.0.1
description = Отчеты
author = Dmitry Pletnev
author_email = Dmitry.Pletnev@evraz.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.16
install_requires =
    PyJWT~=2.0.0
    cryptography~=38.0.1
    pydantic[email,dotenv]~=1.8.2
    python-dateutil~=2.8.2
    sqlalchemy~=1.4.23
    alembic~=1.7.3
    uvicorn~=0.22.0
    fastapi~=0.103.2
    #psycopg2~=2.9.0
    pytz~=2021.3
    click~=8.1.3
    python-json-logger~=2.0.2
    python-dateutil~=2.8.2
    pymssql~=2.2.6
    pika==1.3.2

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0
    toml~=0.10.2
    flake8~=3.9.2
    Flake8-pyproject~=0.9.1

[options.entry_points]
console_scripts =
    reports=reports.composites.cli:cli
